[BUGFIX] Left align the inner content of the box

--- a/Resources/Public/StyleSheets/cookieOptin.css
+++ b/Resources/Public/StyleSheets/cookieOptin.css
@@ -87,6 +87,7 @@
 	border-radius: 5px;
 
 	font-size: 14px;
+	text-align: left;
 }
 
 #SgCookieOptin .sg-cookie-optin-box::-webkit-scrollbar {
